# advent-of-code

./: .gitignore  Cargo.toml  bacon.toml
.github/workflows/: rust.yml
ac2021/: Cargo.toml
ac2021/src/: main.rs  p01.rs  p02.rs  p03.rs  p04.rs  p05.rs  p06.rs  p07.rs  p08.rs  p09.rs  p10.rs  p11.rs  p12.rs  p13.rs  p14.rs  p15.rs
ac2022/: Cargo.toml
ac2022/src/: main.rs  p01.rs  p02.rs  p03.rs  p04.rs  p05.rs  p06.rs  p07.rs  p08.rs  p09.rs  p10.rs  p11.rs  p12.rs  p13.rs  p14.rs  p15.rs  p16.rs  p17.rs
ac2023/: Cargo.toml
ac2023/src/: main.rs  p01.rs  p02.rs  p03.rs  p04.rs  p05.rs  p06.rs  p07.rs  p08.rs  p09.rs  p10.rs  p11.rs  p12.rs
ac2024/: Cargo.toml
ac2024/src/: main.rs  p01.rs  p02.rs  p03.rs  p04.rs  p05.rs  p06.rs  p07.rs  p08.rs  p09.rs  p10.rs  p11.rs  p12.rs  p13.rs  p14.rs  p15.rs
lib/: Cargo.toml
lib/src/: lib.rs
src/: main.rs  p01.rs
