[package]
name = "ac2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indicatif = { workspace = true }
itertools = { workspace = true}
lib = { path = "./../lib" }
nom = { workspace = true }
pathfinding = "4.3.2"
